header & footer final

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -6,22 +6,22 @@
 // @use "base/menu";
 
 // Стили попапов
-// @use "base/popup";
+@use "base/popup";
 
 // Стили спойлеров
-// @use "base/spollers";
+@use "base/spollers";
 
 // Стили табов
-// @use "base/tabs";
+@use "base/tabs";
 
 // Стили карт
 // @use "base/maps";
 
 // Стили блока "показать еще"
-// @use "base/showmore";
+@use "base/showmore";
 
 // Стили для липкого блока
-// @use "base/sticky";
+@use "base/sticky";
 
 // Стили для прокрутки экрана
 // Styles for fullpage scroll
