--- a/src/scss/base/colors-palette.scss
+++ b/src/scss/base/colors-palette.scss
@@ -2,25 +2,18 @@
 // colors palette
 // ===============
 :root {
-	// Site colors (Цвета сайта):
-	// =================================================================
-	--primary: #0a9396; // Site main color - (Основной цвет сайта)
-	--secondary: #94d2bd; // Site secondary color - (Дополнительный цвет сайта)
-	--accent: #0090c1; // Site accent color - (Например: кнопки действия, заголовки, ссылки)
-	--inverse: #ffff3f; // Site inverse color - (Например: для создания контраста между фоном и текстом)
-
-	// Background colors (Фоновые цвета):
-	// =================================================================
-	--bg-primary: #242423; // BG primary background color - (Основной фоновый цвет сайта)
-	--bg-secondary: #7678ed; // BG secondary background color - (Дополнительный фоновый цвет сайта)
-	--bg-accent: #4cc9f0; // BG accent - например, может быть использован для установки цвета фона для акцентных элементов, таких как кнопки или иконки.
-	--bg-inverse: #2d00f7; // BG inverse - например, может использоваться для настройки цвета фона на светлом тексте.
-
-	// Text colors (Текстовые цвета):
-	// =================================================================
-	--text-primary: #fbfffe; // Text primary text color - (Основной текстовый цвет сайта)
-	--text-secondary: #080708; // Text secondary text color - (Дополнительный текстовый цвет сайта)
-	--text-accent: #e8eddf; // Text accent - например, может использоваться для установки цвета текста для акцентных элементов на странице, таких как заголовки или кнопки.
-	--text-inverse: #e8eddf; // Text inverse - например, может использоваться для настройки цвета текста на темном фоне.
-	// =================================================================
+  --white-color: #fff;
+  --black-color: #212529;
+  --accent-color: #1774C9;
+  --accent-hover-color: #0E61AE;
+  --accent-light-color: #E7F1F8;
+  --green-accent-color: #0FBC2E;
+  --green-color: #0DBC2E;
+  --green-light-color: #F5FBF6;
+  --grey-light-color: #E2E2E2;
+  --grey-color: #666666;
+  --grey-dark-color: #262F40;
+  --red-color: #FF0000;
+  --stroke-color: #E2E2E2;
+  --plate-bg-color: #F5F5F5;
 }
