--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -15,50 +15,61 @@ img {
   display: none !important;
 }
 
+._md0dn {
+  @media (width < #{mixins.toEm(1500)}){
+    display: none !important;
+  }
+}
+
+._mmd0dn {
+  @media (width >= #{mixins.toEm(1500)}){
+    display: none !important;
+  }
+}
 ._md1dn {
-  @media (max-width:mixins.toEm(variables.$pc)){
+  @media (width < #{mixins.toEm(variables.$pc)}){
     display: none !important;
   }
 }
 
 ._mmd1dn {
-  @media (min-width:mixins.toEm(variables.$pc)){
+  @media (width >= #{mixins.toEm(variables.$pc)}){
     display: none !important;
   }
 }
 
 ._md2dn {
-  @media (max-width:mixins.toEm(variables.$tablet)){
+  @media (width < #{mixins.toEm(variables.$tablet)}){
     display: none !important;
   }
 }
 
 ._mmd2dn {
-  @media (min-width:mixins.toEm(variables.$tablet)){
+  @media (width >= #{mixins.toEm(variables.$tablet)}){
     display: none !important;
   }
 }
 
 ._md3dn {
-  @media (max-width:mixins.toEm(variables.$mobile)){
+  @media (width < #{mixins.toEm(variables.$mobile)}){
     display: none !important;
   }
 }
 
 ._mmd3dn {
-  @media (min-width:mixins.toEm(variables.$mobile)){
+  @media (width >= #{mixins.toEm(variables.$mobile)}){
     display: none !important;
   }
 }
 
 ._md4dn {
-  @media (max-width:mixins.toEm(variables.$mobileSmall)){
+  @media (width < #{mixins.toEm(variables.$mobileSmall)}){
     display: none !important;
   }
 }
 
 ._mmd4dn {
-  @media (min-width:mixins.toEm(variables.$mobileSmall)){
+  @media (width >= #{mixins.toEm(variables.$mobileSmall)}){
     display: none !important;
   }
 }
@@ -108,4 +119,15 @@ img {
   from {
       left: -3.75rem
   }
+}
+
+
+
+::-webkit-scrollbar {
+  width: mixins.toRem(5);
+  background-color: var(--plate-bg-color);
+}
+::-webkit-scrollbar-thumb {
+  background-color: var(--accent-color);
+  border-radius: mixins.toRem(5);
 }
