--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,6 +13,7 @@
 // Подключить если есть файл иконочного шрифта
 //@import "fonts/icons";
 @use 'variables';
+@use 'base/colors-palette';
 
 // ============================================================================================================================================================================================================================================================================================================================================================================================
 // ============================================================================================================================================================================================================================================================================================================================================================================================
@@ -41,6 +42,8 @@ body {
 	display: flex;
 	flex-direction: column;
 	overflow: hidden;
+  padding-top: var(--bxPanelHeight);
+  background-color: #000;
 	@supports (overflow: clip) {
 		overflow: clip;
 	}
@@ -68,12 +71,11 @@ body {
 			margin: 0 auto;
 		}
 		@if (variables.$containerPadding>0) {
-			@if (variables.$maxWidthContainer>0) {
-				padding: 0 mixins.toRem(math.div(variables.$containerPadding, 2));
-			} @else {
-				@include mixins.adaptiveValue("padding-left", math.div(variables.$containerPadding, 2), 15);
-				@include mixins.adaptiveValue("padding-right", math.div(variables.$containerPadding, 2), 15);
-			}
+      padding-left: var(--padding-left);
+      padding-right: var(--padding-right);
+
+      @include mixins.adaptiveValue("--padding-left", math.div(variables.$containerPadding, 2), 10, 1280, 992);
+      @include mixins.adaptiveValue("--padding-right", math.div(variables.$containerPadding, 2), 10, 1280, 992);
 		}
 	}
 } @else {
