--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -3,8 +3,8 @@
 // ============================================================================================================================================================================================================================================================================================================================================================================================
 
 // Шрифт по умолчанию ==============================================================================================================================================================================================================================================================================
-$fontFamily: "";
-$fontSize: 14; // где 14(px) - размер шрифта по умолчанию из макета
+$fontFamily: "Noto Sans";
+$fontSize: 16; // где 14(px) - размер шрифта по умолчанию из макета
 
 // Основные цвета
 $mainColor: #000; // Цвет шрифта по умолчанию
@@ -19,16 +19,16 @@ $minWidth: 320;
 // Ширина полотна (макета)
 $maxWidth: 1920;
 // Ширина ограничивающего контейнера (0 = нет ограничения)
-$maxWidthContainer: 1170;
+$maxWidthContainer: 1280;
 // Общий отступ у контейнера
 // (30 = по 15px слева и справа, 0 = нет отступа)
-$containerPadding: 30;
+$containerPadding: 280;
 
 // Ширина срабатывания первого брейкпоинта
 $containerWidth: $maxWidthContainer + $containerPadding;
 
 // Брейк-поинты
-$pc: $containerWidth; // ПК, ноутбуки, некоторые планшеты в горизонтальном положении
+$pc: $maxWidthContainer; // ПК, ноутбуки, некоторые планшеты в горизонтальном положении
 $tablet: 991.98; // Планшеты, некоторые телефоны в горизонтальном положении
 $mobile: 767.98; // Телефоны L
 $mobileSmall: 479.98; // Телефоны S
