home page final

--- a/src/scss/base/colors-palette.scss
+++ b/src/scss/base/colors-palette.scss
@@ -3,6 +3,7 @@
 // ===============
 :root {
   --white-color: #fff;
+  --white-color-80: #FFFFFFCC;
   --black-color: #212529;
   --accent-color: #1774C9;
   --accent-hover-color: #0E61AE;
