--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -5,6 +5,7 @@
 .footer {
   background-color: var(--plate-bg-color);
   border-radius: var(--brad) var(--brad) 0 0;
+  position: relative;
 
   @include mixins.adaptiveValue("--brad", 30, 20, 1280, 768);
 
@@ -201,6 +202,7 @@
   left: 0;
   right: 0;
   display: grid;
+  z-index: 6;
   grid-template-columns: repeat(5, 1fr);
   background-color: var(--plate-bg-color);
   padding: mixins.toRem(10) 0 mixins.toRem(13);
