--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -4,7 +4,7 @@
 
 // Шрифт по умолчанию ==============================================================================================================================================================================================================================================================================
 $fontFamily: "Noto Sans";
-$fontSize: 16; // где 14(px) - размер шрифта по умолчанию из макета
+$fontSize: 16px; // где 14(px) - размер шрифта по умолчанию из макета
 
 // Основные цвета
 $mainColor: #000; // Цвет шрифта по умолчанию
