--- a/src/scss/base/colors-palette.scss
+++ b/src/scss/base/colors-palette.scss
@@ -4,6 +4,7 @@
 :root {
   --white-color: #fff;
   --white-color-80: #FFFFFFCC;
+  --white-color-70: #ffffffb3;
   --black-color: #212529;
   --accent-color: #1774C9;
   --accent-hover-color: #0E61AE;
@@ -13,8 +14,11 @@
   --green-light-color: #F5FBF6;
   --grey-light-color: #E2E2E2;
   --grey-color: #666666;
+  --grey-color-50: rgba(102, 102, 102, 0.5);
   --grey-dark-color: #262F40;
   --red-color: #FF0000;
   --stroke-color: #E2E2E2;
   --plate-bg-color: #F5F5F5;
+  --modal_bg: #66666666;
+  --disabled-color: #AFAFAF;
 }
