--- a/src/scss/base/forms/select.scss
+++ b/src/scss/base/forms/select.scss
@@ -1,3 +1,7 @@
+@use "sass:math";
+@use "/src/scss/base/mixins.scss";
+@use "/src/scss/variables.scss";
+
 // <SELECT>
 // Сниппет (HTML): sel
 .select {
@@ -11,11 +15,12 @@
 	&__title {
 		color: inherit;
 		text-align: left;
-		border: 1px solid #d9d9d9;
 		background-color: #fff;
 		cursor: pointer;
 		width: 100%;
-		border-radius: 4px;
+		border-radius: mixins.toRem(15);
+    height: mixins.toRem(45);
+    padding: mixins.toRem(14) mixins.toRem(15);
 	}
 	// .select__value
 	&__value {
@@ -31,11 +36,14 @@
 		&:after {
 			content: "";
 			align-self: stretch;
-			flex: 0 0 10px;
+			flex: 0 0 11px;
+      height: mixins.toRem(11);
 			transition: all 0.3s ease 0s;
-			display: flex;
-			justify-content: center;
-			align-items: center;
+      display: block;
+      align-self: center;
+      background-image: url("data:image/svg+xml,%3Csvg width='11' height='11' viewBox='0 0 11 11' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.75 3.625L5.5 7.375L9.25 3.625' stroke='%23212529' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+      background-repeat: no-repeat;
+      background-position: center;
 			._select-open & {
 				transform: rotate(-180deg);
 			}
@@ -70,15 +78,12 @@
 	&__options {
 		color: #000;
 		position: absolute;
-		top: calc(100% - toRem(1));
-		border-radius: 0 0 4px 4px;
+		top: calc(100% + mixins.toRem(5));
+		border-radius: mixins.toRem(15);
 		min-width: 100%;
 		left: 0;
 		background-color: #fff;
-		border-top: 0;
-		border: 1px solid #d9d9d9;
-		border-top: 0;
-		padding: 10px 0px 5px 0px;
+    overflow: hidden;
 	}
 	// .select__scroll
 	&__scroll {
@@ -98,14 +103,14 @@
 		width: 100%;
 		text-align: left;
 		cursor: pointer;
-		padding: 5px 15px;
+		padding: mixins.toRem(14) mixins.toRem(15);
 		color: inherit;
 		&._select-selected {
 			background-color: #eee;
 		}
 		@media (any-hover: hover) {
 			&:hover {
-				background: #d9d9d9;
+				background: var(--accent-light-color);
 			}
 		}
 	}
