cart & checkout final

--- a/src/scss/base/colors-palette.scss
+++ b/src/scss/base/colors-palette.scss
@@ -19,6 +19,7 @@
   --red-color: #FF0000;
   --stroke-color: #E2E2E2;
   --plate-bg-color: #F5F5F5;
+  --plate-bg-color-50: #F5F5F5CC;
   --modal_bg: #66666666;
   --disabled-color: #AFAFAF;
   --yellow-color: #FEEB45;
