--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -125,3 +125,4 @@ body {
 @include meta.load-css("home");
 @include meta.load-css("listing");
 @include meta.load-css("product");
+@include meta.load-css("cart");
