--- a/src/scss/base/forms/quantity.scss
+++ b/src/scss/base/forms/quantity.scss
@@ -1,13 +1,18 @@
-//<QUANTITY>
-// Сниппет (HTML): qa
+@use "sass:math";
+@use "/src/scss/base/mixins.scss";
+@use "/src/scss/variables.scss";
+
 .quantity {
-	width: 88px;
-	height: 40px;
+	// width: mixins.toRem(114);
+  min-width: mixins.toRem(100);
+	width: 100%;
+	height: mixins.toRem(50);
 	display: flex;
-	border: 1px solid rgba(166, 166, 166, 0.45);
+	border: mixins.toRem(1) solid var(--stroke-color);
+  border-radius: mixins.toRem(15);
 	// .quantity__button
 	&__button {
-		flex: 0 0 30px;
+		flex: 0 0 mixins.toRem(30);
 		position: relative;
 		cursor: pointer;
 		&::before,
@@ -17,10 +22,10 @@
 			top: 50%;
 			left: 50%;
 			transition: all 0.3s ease 0s;
-			margin: 0px 0px 0px -4.5px;
-			background-color: #a6a6a6;
-			width: 9px;
-			height: 1px;
+			margin: 0px 0px 0px mixins.toRem(-4.5);
+			background-color: var(--black-color);
+			width: mixins.toRem(9);
+			height: mixins.toRem(2);
 		}
 		@media (any-hover: hover) {
 			&:hover {
@@ -31,13 +36,13 @@
 			}
 		}
 		// .quantity__button_plus
-		&--plus {
+		&_plus {
 			&::before {
 				transform: rotate(-90deg);
 			}
 		}
 		// .quantity__button_minus
-		&--minus {
+		&_minus {
 		}
 	}
 	// .quantity__input
@@ -45,8 +50,9 @@
 		flex: 1 1 auto;
 		input {
 			height: 100%;
-			color: #a6a6a6;
-			font-size: 12px;
+			color: var(--black-color);
+			font-size: mixins.toRem(14);
+      font-weight: 600;
 			width: 100%;
 			text-align: center;
 		}
