--- a/src/scss/base/colors-palette.scss
+++ b/src/scss/base/colors-palette.scss
@@ -11,6 +11,7 @@
   --accent-light-color: #E7F1F8;
   --green-accent-color: #0FBC2E;
   --green-color: #0DBC2E;
+  --green-small-light-color: #E5F6E9;
   --green-light-color: #F5FBF6;
   --grey-light-color: #E2E2E2;
   --grey-color: #666666;
