--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -411,6 +411,10 @@
       top: 0;
       right: 50%;
       translate: 100% -25%;
+
+      &:empty {
+        display: none;
+      }
     }
 
     strong {
@@ -1168,6 +1172,7 @@
     font-size: mixins.toRem(12);
     line-height: 1.2;
     color: var(--grey-color);
+    cursor: pointer;
 
     &:not(:last-child) {margin-bottom: mixins.toRem(16);}
 
